--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <title>Title</title>
     <link href="css/bootstrap.min.css" type="text/css" rel="stylesheet">
     <link href="css/memorygame.css" type="text/css" rel="stylesheet">
+    <meta name="viewport" content="width=device-width">
+    <meta name="mobile-web-app-capable" content="yes">
+    <link rel="apple-touch-icon" href="images/touch-icon-iphone.png" />
 </head>
 <body>
 
